--- a/public/app/stylesheets/main.css
+++ b/public/app/stylesheets/main.css
@@ -213,7 +213,7 @@ th {
 }
 /*Colors*/
 body {
-  font-size: 16px;
+  font-size: 14px;
   font-family: Arial;
 }
 footer {
@@ -250,6 +250,7 @@ header .options-header:nth-child(odd) {
 }
 table {
   height: 80%;
+  overflow-x: scroll;
 }
 table td {
   vertical-align: middle !important;
@@ -259,7 +260,7 @@ table .icon-play-container {
   width: 35px;
   height: 35px;
   padding: 8px;
-  margin-left: 1em;
+  margin-left: 0.2em;
 }
 table .icon-play-container .icon-play {
   width: 0;
@@ -277,6 +278,9 @@ table .icon-play-container .icon-play {
 }
 .button-active {
   background: #e0bb31;
+}
+.cursor-pointer {
+  cursor: pointer;
 }
 .margin-zero {
   margin: 0;
