--- a/public/app/stylesheets/main.styl
+++ b/public/app/stylesheets/main.styl
@@ -15,7 +15,7 @@ $input-color = #9ABEC9
 $white = #FFFFFF
 
 body
-  font-size 16px
+  font-size 14px
   font-family Arial
 
 footer
@@ -53,6 +53,7 @@ header
 
 table
   height 80%
+  overflow-x scroll
 
   td
     vertical-align middle !important
@@ -62,7 +63,7 @@ table
     width 35px
     height 35px
     padding 8px
-    margin-left 1em
+    margin-left 0.2em
 
     .icon-play
       width 0
@@ -79,6 +80,9 @@ table
 
 .button-active
   background  $button-active
+
+.cursor-pointer
+  cursor pointer
 
 .margin-zero
   margin 0
