--- a/public/app/stylesheets/main.css
+++ b/public/app/stylesheets/main.css
@@ -213,8 +213,10 @@ th {
 }
 /*Colors*/
 body {
-  font-size: 14px;
+  font-size: 12px;
   font-family: Arial;
+  height: 100%;
+  width: 100%;
 }
 footer {
   background: #0f3d4a;
@@ -222,7 +224,7 @@ footer {
   font-size: 8px;
   position: fixed;
   bottom: 0;
-  margin: 0;
+  margin: 1em 0 0 0;
   height: 7em;
   line-height: 7;
   vertical-align: middle;
@@ -232,9 +234,14 @@ footer {
 footer .borders {
   border-right: 1px solid #ff0;
   border-left: 1px solid #ff0;
+  padding: 0 1em;
+}
+header {
+  overflow: hidden;
 }
 header h1 {
-  margin-top: 2em;
+  margin-top: 1.2em;
+  font-size: 3.5em;
 }
 header .border-top {
   border-top: 5px solid #fcd45e;
@@ -248,33 +255,19 @@ header .options-header {
 header .options-header:nth-child(odd) {
   margin-right: 2em;
 }
-table {
-  height: 80%;
-  overflow-x: scroll;
-}
-table td {
-  vertical-align: middle !important;
-}
-table .icon-play-container {
-  background: #c03c99;
-  width: 35px;
-  height: 35px;
-  padding: 8px;
-  margin-left: 0.2em;
-}
-table .icon-play-container .icon-play {
-  width: 0;
-  height: 0;
-  border-top: 10px solid transparent;
-  border-left: 20px solid #fff;
-  border-bottom: 10px solid transparent;
-}
 .button-normal {
   background: #fcc136;
   border-color: #e0bb31;
+  padding: 6px 10px;
 }
 .button-normal:hover {
   background: #e0bb31;
+}
+.button-normal:focus {
+  background: #e0bb31;
+  border: 5px solid #e0bb31;
+  box-shadow: 0 0 0 transparent;
+  border-style: none;
 }
 .button-active {
   background: #e0bb31;
@@ -282,22 +275,55 @@ table .icon-play-container .icon-play {
 .cursor-pointer {
   cursor: pointer;
 }
+.icon-play-container {
+  background: #c03c99;
+  border-radius: 5px;
+  width: 35px;
+  height: 35px;
+  padding: 8px;
+/*margin-left 0.2em*/
+}
+.icon-play-container .icon-play {
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-left: 20px solid #fff;
+  border-bottom: 10px solid transparent;
+}
 .margin-zero {
   margin: 0;
 }
 .search-container {
-  margin: 0 auto 3em auto;
+  margin: 0 auto 1.5em auto;
 }
 .search-container input {
   border-radius: 30px;
   padding: 0.3em 0.8em;
-  width: 100%;
+  width: 96%;
   background: #106080;
   color: #9abec9;
 }
 .search-container .icon-search {
   position: absolute;
-  right: 2em;
+  right: 4.8em;
   top: 0.5em;
   color: #fcd45e;
+}
+.table-borders {
+  padding: 0.8em;
+}
+.table-borders:nth-child(even) {
+  border-top: 2px solid #4db6ca;
+  border-bottom: 2px solid #4db6ca;
+  background: #4db6ca;
+}
+.table-borders:nth-child(odd) {
+  background: #c0e6ed;
+}
+.table-container {
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: absolute;
+  width: 96%;
+  height: 50%;
 }
