--- a/public/app/stylesheets/main.styl
+++ b/public/app/stylesheets/main.styl
@@ -15,8 +15,10 @@ $input-color = #9ABEC9
 $white = #FFFFFF
 
 body
-  font-size 14px
+  font-size 12px
   font-family Arial
+  height 100%
+  width 100%
 
 footer
   background $footer-background
@@ -24,7 +26,7 @@ footer
   font-size 8px
   position fixed
   bottom 0
-  margin 0
+  margin 1em 0 0 0
   height 7em
   line-height 7
   vertical-align middle
@@ -34,10 +36,13 @@ footer
   .borders
     border-right 1px solid #ffff00
     border-left 1px solid #ffff00
+    padding 0 1em
 
 header
+  overflow hidden
   h1
-    margin-top 2em
+    margin-top 1.2em
+    font-size 3.5em
 
   .border-top
     border-top 5px solid $yellow
@@ -51,32 +56,17 @@ header
     &:nth-child(odd)
       margin-right 2em
 
-table
-  height 80%
-  overflow-x scroll
-
-  td
-    vertical-align middle !important
-
-  .icon-play-container
-    background #C03C99
-    width 35px
-    height 35px
-    padding 8px
-    margin-left 0.2em
-
-    .icon-play
-      width 0
-      height 0
-      border-top 10px solid transparent
-      border-left 20px solid $white
-      border-bottom 10px solid transparent
-
 .button-normal
   background $button-normal
   border-color $button-active
+  padding 6px 10px
   &:hover
     background $button-active
+  &:focus
+    background $button-active
+    border 5px solid $button-active
+    box-shadow 0 0 0 transparent
+    border-style none
 
 .button-active
   background  $button-active
@@ -84,21 +74,53 @@ table
 .cursor-pointer
   cursor pointer
 
+.icon-play-container
+  background #C03C99
+  border-radius 5px
+  width 35px
+  height 35px
+  padding 8px
+  /*margin-left 0.2em*/
+
+  .icon-play
+    width 0
+    height 0
+    border-top 10px solid transparent
+    border-left 20px solid $white
+    border-bottom 10px solid transparent
+
 .margin-zero
   margin 0
 
 .search-container
-  margin 0 auto 3em auto
+  margin 0 auto 1.5em auto
 
   input
     border-radius 30px
     padding 0.3em 0.8em
-    width 100%
+    width 96%
     background $input-background
     color $input-color
 
   .icon-search
     position absolute
-    right 2em
+    right 4.8em
     top 0.5em
     color $yellow
+
+.table-borders
+  padding 0.8em
+  &:nth-child(even)
+    border-top 2px solid $grid-dark
+    border-bottom 2px solid $grid-dark
+    background $grid-dark
+  &:nth-child(odd)
+    background $grid-light
+
+
+.table-container
+  overflow-y auto
+  overflow-x hidden
+  position absolute
+  width 96%
+  height 50%
