--- a/public/app/views/listSongs.html
+++ b/public/app/views/listSongs.html
@@ -13,8 +13,8 @@
         </div>
         <div class="col-xs-4 pull-right">
             <div class="btn-group pull-right">
-                <button type="button" class="btn btn-default button-normal font-buttons">Today</button>
-                <button type="button" class="btn btn-default button-normal font-buttons">Friday</button>
+                <button type="button" class="btn btn-default button-normal font-buttons" translate="TODAY"></button>
+                <button type="button" class="btn btn-default button-normal font-buttons" translate="FRIDAY"></button>
             </div>
         </div>
     </div>
