--- a/public/app/stylesheets/main.css
+++ b/public/app/stylesheets/main.css
@@ -217,6 +217,7 @@ body {
   font-family: Arial;
   height: 100%;
   width: 100%;
+  background-image: url("../img/background.jpg");
 }
 footer {
   background: #0f3d4a;
@@ -230,6 +231,8 @@ footer {
   vertical-align: middle;
   left: 0;
   right: 0;
+  box-shadow: 0px -2px 20px 0px rgba(0,0,0,0.53);
+  font-weight: 400;
 }
 footer .borders {
   border-right: 1px solid #ff0;
@@ -242,6 +245,8 @@ header {
 header h1 {
   margin-top: 1.2em;
   font-size: 3.5em;
+  color: #fff;
+  font-weight: 400;
 }
 header .border-top {
   border-top: 5px solid #fcd45e;
@@ -257,23 +262,28 @@ header .options-header:nth-child(odd) {
 }
 .button-normal {
   background: #fcc136;
-  border-color: #e0bb31;
+  border-color: #b29d11;
   padding: 6px 10px;
+  background: linear-gradient(0deg, #fcb314 0%, #fff476 100%);
 }
 .button-normal:hover {
-  background: #e0bb31;
+  background: #e1bc30;
+  border: 1px solid #b29d11;
 }
 .button-normal:focus {
-  background: #e0bb31;
-  border: 5px solid #e0bb31;
+  background: #e1bc30;
+  border: 1px solid #b29d11;
   box-shadow: 0 0 0 transparent;
   border-style: none;
 }
 .button-active {
-  background: #e0bb31;
+  background: $button-active;
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.display-inlineblock {
+  display: inline-block;
 }
 .icon-play-container {
   background: #c03c99;
@@ -281,7 +291,6 @@ header .options-header:nth-child(odd) {
   width: 35px;
   height: 35px;
   padding: 8px;
-/*margin-left 0.2em*/
 }
 .icon-play-container .icon-play {
   width: 0;
@@ -299,13 +308,15 @@ header .options-header:nth-child(odd) {
 .search-container input {
   border-radius: 30px;
   padding: 0.3em 0.8em;
-  width: 96%;
+  width: 100%;
   background: #106080;
   color: #9abec9;
+  letter-spacing: 0.01em;
+  font-weight: 400;
 }
 .search-container .icon-search {
   position: absolute;
-  right: 4.8em;
+  right: 2.8em;
   top: 0.5em;
   color: #fcd45e;
 }
@@ -326,4 +337,18 @@ header .options-header:nth-child(odd) {
   position: absolute;
   width: 96%;
   height: 50%;
+}
+@media screen and (min-width: 820px) {
+  body {
+    font-size: 16px;
+  }
+  footer {
+    font-size: 0.7em;
+  }
+  .search-container input {
+    width: 96%;
+  }
+  .search-container .icon-search {
+    right: 4.8em;
+  }
 }
